--- a/index.html
+++ b/index.html
@@ -4,10 +4,41 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Product preview card component</title>
-		<link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon" />
+		<link
+			rel="shortcut icon"
+			href="./images/favicon-32x32.png"
+			type="image/x-icon"
+		/>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-        
+		<main>
+			<div class="product-image">
+				<img src="./images/image-product-desktop.jpg" />
+			</div>
+			<article>
+				<header>
+					<p>PERFUME</p>
+					<h1>Gabrielle Essence Eau De Parfum</h1>
+				</header>
+				<section>
+					<p>
+						A floral, solar and voluptuous interpretation composed
+						by Olivier Polge, Perfumer-Creator for the House of
+						CHANEL.
+					</p>
+					<h2>
+						$149.99
+						<span>$169.99</span>
+					</h2>
+				</section>
+				<footer>
+					<button>
+						<img src="./icon-cart.svg" />
+						Add to Cart
+					</button>
+				</footer>
+			</article>
+		</main>
 	</body>
 </html>
