Complete desktop and mobile design

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Product preview card component</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
+			rel="stylesheet"
+		/>
 		<link
 			rel="shortcut icon"
 			href="./images/favicon-32x32.png"
@@ -15,6 +21,7 @@
 		<main>
 			<div class="product-image">
 				<img src="./images/image-product-desktop.jpg" />
+				<img src="./images/image-product-mobile.jpg" />
 			</div>
 			<article>
 				<header>
